committing working auth endpoints

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "will be the backend for the 11/18--LIFE--GPA",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
